fix color contrast

--- a/_css/main.scss
+++ b/_css/main.scss
@@ -24,7 +24,7 @@ $clemson-purple:      $header-color;
 $clemson-orange:      $accent-color;
 
 
-$grey-color:       #828282;
+$grey-color:       #757575;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
